# stt-md

./: .gitignore  Cargo.toml  Info.plist  LICENSE  Makefile  README.md  build.rs
src/: app_state.rs  audio_utils.rs  config.rs  lib.rs  main.rs  notifications.rs  paths.rs  sounds.rs
src/llm/: mod.rs  ollama.rs  prompts.rs
src/recording/: mic.rs  mixer.rs  mod.rs  system_audio.rs  wav_writer.rs
src/transcription/: mod.rs  whisper.rs
src/vault/: daily_appender.rs  meeting_writer.rs  mod.rs  scanner.rs  simple_writer.rs
